tests/snapshots/scripts_sanitized/Admin API Tool/FM Data API - ID 75/Get Layouts - ID 81.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Get Server Status
#  HISTORY:
     - Created:   2018-05-09 by Mike Duncan (mduncan@soliantconsulting.com)
     - Modified:  2019-04-23 by Mike Duncan, update to v2 admin api

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config FMDAPI" ]
Variable setzen [ $endpoint ; "/databases/" & FMS__fmserver::dapi_filename & "/layouts" ]
Variable setzen [ $curloptions ; " --request GET" &
				" --header \"Content-Type: application/json\"" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --dump-header $$my.headers" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response DAPI" ]

Wenn [ Hole ( ScriptErgebnis ) = "1" ]
	Feldwert setzen [ FMS__fmserver::dapi_layouts ; "" ]
	# parse json response
	Variable setzen [ $json ; FMS__fmserver::zz_result_g ]
	Variable setzen [ $count ; 0 ]
	Schleife (Anfang)
		Variable setzen [ $this.isfolder ; JSONGetElement ( $json ; "response.layouts[" & $count & "].isFolder" ) ]
		Wenn [ $this.isfolder = 1 ]
			Variable setzen [ $i ; 0 ]
			Schleife (Anfang)
				Feldwert setzen [ FMS__fmserver::dapi_layouts ; Falls ( NICHT IstLeer ( FMS__fmserver::dapi_layouts ); FMS__fmserver::dapi_layouts & "¶"  )
								&
								JSONGetElement ( $json ; "response.layouts[" & $count & "].folderLayoutNames[" & $i & "].name" ) ]
				Variable setzen [ $i ; $i + 1 ]
				Verlasse Schleife wenn [ IstLeer ( JSONGetElement ( $json ; "response.layouts[" & $count & "].folderLayoutNames[" & $i & "].name" ) ) ]
			Schleife (Ende)
		Sonst
			Feldwert setzen [ FMS__fmserver::dapi_layouts ; Falls ( NICHT IstLeer ( FMS__fmserver::dapi_layouts ); FMS__fmserver::dapi_layouts & "¶"  )
							&
							JSONGetElement ( $json ; "response.layouts[" & $count & "].name" ) ]
		Ende (wenn)
		Variable setzen [ $count ; $count + 1 ]
		Verlasse Schleife wenn [ IstLeer ( JSONGetElement ( $json ; "response.layouts[" & $count & "].name" ) ) ]
	Schleife (Ende)
	Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
Ende (wenn)

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
