tests/snapshots/scripts_sanitized/Admin API Tool/FM Data API - ID 75/Get Product Info - ID 82.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Get Server Status
#  HISTORY:&#13;   - Created:   2018-05-09 by Mike Duncan (mduncan@soliantconsulting.com)&#13;   - Modified:  2019-04-23 by Mike Duncan, update to v2 admin api

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Variable setzen [ $$server ; "https://" & FMS__fmserver::server_address & "/fmi/data/vLatest" ]
Variable setzen [ $endpoint ; "/productInfo" ]
Variable setzen [ $curloptions ; " --request GET" &
				" --header \"Content-Type: application/json\"" &
				" --dump-header $$my.headers" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️

Variable setzen [ $my.response ; Austauschen ( HoleWert ( $$my.headers ; 1 ) ; "HTTP/1.1 " ; "" ) ]
Wenn [ $my.response = "200 OK" ]
	# parse json response
	Feldwert setzen [ FMS__fmserver::dapi_productInfo ; JSONFormatElements ( JSONGetElement ( $$my.result ; "response.productInfo" ) ) ]
	Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
Ende (wenn)

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
